--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ description: "neer，UX Designer"
 keyword: "Web, JavaScript, 前端, 设计"
 url: "https://wone2287.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
+remote_theme: Huxpro/huxpro.github.io
 
 # Publish posts or collection documents with a future date.
 future: true
