--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,14 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "Site Title"
 title_separator          : "-"
-name                     : "wone2287"
+name                     : "Your Name"
 description              : "An amazing website."
-url                      : "https://wone2287.github.io
+url                      : "https://wone2287.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-remote_theme             : mmistakes/minimal-mistakes
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
