--- a/_config.yml
+++ b/_config.yml
@@ -106,10 +106,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Heo"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : "__init"
+  location         : "Seoul"
   email            :
   links:
     - label: "Email"
