--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "ko"
 title                    : "삽질하는 공간"
 title_separator          : "-"
 name                     : "wone2287"
-description              : "just dig in"
+description              : "블로그 이전 linux-studying.tistory.com"
 url                      : "https://wone2287.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
