--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Heo"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "__init"
+  bio              : "https://linux-studying.tistory.com/ 블로그 이전"
   location         : "Seoul"
   email            :
   links:
